# OneJS-Debugger

./: .gitattributes  .gitmodules  README.md  build.sh  package.json
.github/workflows/: release.yml
Auxiliary~/onejs-debugger/: CMakeLists.txt  README.md  build-all.sh  build-android.sh  build-ios.sh  build-linux.sh  build-webgl.sh  build-windows-msvc.bat  build-windows.sh  build.sh  package-local.sh  snapshot-default-plugins.sh
Auxiliary~/onejs-debugger/src/: onejs_debugger_glue.cpp  quickjs_unity.c
Editor/: DebuggerAutoHook.cs  OnejsDebuggerWindow.cs  PluginSwap.cs
OneJS/Editor/: CartridgeObjectEntryDrawer.cs  JSPadEditor.cs  JSRunnerAutoWatch.cs  JSRunnerBuildProcessor.cs  JSRunnerEditor.cs  OneJS.Editor.asmdef  OneJSEditorDesign.cs  README.md
OneJS/Editor/TypeGenerator/: TypeGeneratorBuilder.cs  TypeGeneratorPresets.cs  TypeGeneratorResult.cs  TypeTreeView.cs
OneJS/Editor/TypeGenerator/Analysis/: TypeAnalyzer.cs  TypeMapper.cs
OneJS/Editor/TypeGenerator/Models/: TsGenericConstraint.cs  TsMethodInfo.cs  TsParameterInfo.cs  TsTypeRef.cs
OneJS/Editor/TypeGenerator/Tests/: OneJS.Editor.TypeGenerator.Tests.asmdef
OneJS/Resources/OneJS/: ATTRIBUTIONS.md  BackdropBlur.shader
OneJS/Runtime/: AssetLoader.cs  CartridgeTypeGenerator.cs  JSRunner.cs  Janitor.cs  QuickJSContext.cs  QuickJSNative.FastPath.cs  QuickJSNative.Reflection.cs  README.md  SourceMapParser.cs  UICartridge.cs  WebSocketBridge.cs
OneJS/Runtime/Controls/: README.md
OneJS/Runtime/GPU/: BackdropBlurManager.cs  ComputeShaderProvider.cs  FrostedGlassElement.cs
OneJS/Runtime/Input/: InputBridge.cs  README.md
OneJS/Runtime/Profiling/: QuickJSProfilerMinimal.cs  QuickJSZeroAllocProfilerTest.cs
OneJS/Unity/Proc/: MeshGenerator.cs
OneJS/Unity/Shaders/: CheckerboardUnlit.shader
OneJS/Unity/Shaders/Noise/: ProceduralNoise.compute  ProceduralPatterns.compute
Plugins/WebGL/: OnejsDebuggerWebGL.jslib  README.md
Plugins/macOS/: libquickjs_unity.dylib
Plugins~/macOS/: libquickjs_unity.dylib
Runtime/: JsEnv.cs  OnejsDebugger.Runtime.asmdef
UnityProject/: .gitignore
UnityProject/Assets/Scenes/: SampleScene.unity  onejs-demo.bak
UnityProject/Assets/Scenes/SampleScene/App/: PanelSettings.asset  UIDocument.uxml  app.js.map.txt  app.js.txt
UnityProject/Assets/Scenes/SampleScene/App/~/: esbuild.config.mjs  index.tsx  package-lock.json  tsconfig.json
UnityProject/Assets/Scenes/SampleScene/App/~/styles/: main.uss
UnityProject/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
UnityProject/ProjectSettings/: ProjectSettings.asset
docs/: quick-js-debugger-prd_v1.md
qjs_debug~/macos/: qjs_debug
